fix: cover photo height on mobile

--- a/apps/laudebugs/src/components/post-info.module.scss
+++ b/apps/laudebugs/src/components/post-info.module.scss
@@ -51,7 +51,7 @@
       overflow: hidden;
       display: flex;
       flex-direction: column;
-      height: 420px;
+      height: 260px;
     }
   }
 }
